# pose-estimation

./: .gitignore  CLAUDE.md  README.md  inspect_links.py  live_fall_alert.py  pose_link_logger.py  pose_link_logger_offline.py
.claude/: settings.local.json
pose_sessions/.claude/: settings.local.json
ros2_ws/src/aura_pose_estimation/: package.xml  setup.cfg  setup.py
ros2_ws/src/aura_pose_estimation/aura_pose_estimation/: fall_detection_node.py  fall_visualizer_node.py  floor_plane.py  pose_estimation_node.py
ros2_ws/src/aura_pose_estimation/launch/: aura_pose.launch.py
ros2_ws/src/aura_pose_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/aura_pose_msgs/msg/: FallState.msg  Keypoint3D.msg  Link.msg  PersonPose.msg  PoseFrame.msg
